--- a/Home page/index2.html
+++ b/Home page/index2.html
@@ -128,37 +128,37 @@ footer {
         <div class="game-card">
             <h3>Whack a Mole</h3>
             <p>Test your reflexes in this classic game.</p>
-            <a href="/Real_Games/whack-a-mole.html" class="play-btn">Play</a>
+            <a href="./Real_Games/whack-a-mole.html" class="play-btn">Play</a>
         </div>
 
         <div class="game-card">
             <h3>Typing Speed</h3>
             <p>Improve your typing speed with fun challenges.</p>
-            <a href="/Real_Games/typing-speed.html" class="play-btn" >Play</a>
+            <a href="./Real_Games/typing-speed.html" class="play-btn" >Play</a>
         </div>
 
         <div class="game-card">
             <h3>Sudoku</h3>
             <p>Challenge your brain with Sudoku puzzles.</p>
-            <a href="Real_Games/sudoku.html" class="play-btn">Play</a>
+            <a href="./Real_Games/sudoku.html" class="play-btn">Play</a>
         </div>
 
         <div class="game-card">
             <h3>2048</h3>
             <p>Slide and combine tiles to reach 2048.</p>
-            <a href="/Real_Games/2048.html" class="play-btn" target="_blank">Play</a>
+            <a href="./Real_Games/2048.html" class="play-btn">Play</a>
         </div>
 
         <div class="game-card">
             <h3>Snake Game</h3>
             <p>Feed the snake to make it large</p>
-            <a href="/Real_Games/snake.html" class="play-btn" target="_blank">Play</a>
+            <a href="./Real_Games/snake.html" class="play-btn" >Play</a>
         </div>
 
         <div class="game-card">
             <h3>Memory Game</h3>
             <p>Watch and Remember</p>
-            <a href="/Real_Games/Memory-game.html" class="play-btn" target="_blank">Play</a>
+            <a href="./Real_Games/Memory-game.html" class="play-btn">Play</a>
         </div>
     </section>
 
