add new features

--- a/Home page/Real_Games/2048.html
+++ b/Home page/Real_Games/2048.html
@@ -132,6 +132,7 @@ button:hover {
             </div>
         </div>
         <div class="controls-container">
+            <a href="../index2.html"><button>Home</button></a>
             <button onclick="restartGame()">New Game</button>
             <button onclick="togglePause()" id="pause-btn">Pause</button>
         </div>
