--- a/Home page/Real_Games/sudoku.html
+++ b/Home page/Real_Games/sudoku.html
@@ -8,204 +8,219 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
 
-body {
-    text-align: center;
-    font-family: 'Orbitron', sans-serif;
-    background-color: #0d0d0d;
-    color: cyan;
-    margin: 0;
-    padding: 20px;
-}
+        body {
+            text-align: center;
+            font-family: 'Orbitron', sans-serif;
+            background-color: #0d0d0d;
+            color: cyan;
+            margin: 0;
+            padding: 20px;
+        }
 
-h1 {
-    font-size: 36px;
-    text-shadow: 0 0 10px cyan, 0 0 20px cyan;
-    margin-bottom: 20px;
-}
+        h1 {
+            font-size: 36px;
+            text-shadow: 0 0 10px cyan, 0 0 20px cyan;
+            margin-bottom: 10px;
+        }
 
-#sudoku-container {
-    display: flex;
-    justify-content: center;
-    margin: 20px auto;
-}
+        #sudoku-container {
+            display: flex;
+            justify-content: center;
+            margin: 20px auto;
+        }
 
-table {
-    border-collapse: collapse;
-    box-shadow: 0 0 15px cyan;
-}
+        table {
+            border-collapse: collapse;
+            box-shadow: 0 0 15px cyan;
+        }
 
-td {
-    width: 50px;
-    height: 50px;
-    text-align: center;
-    border: 2px solid cyan;
-    box-shadow: inset 0 0 10px cyan;
-    position: relative;
-}
+        td {
+            width: 50px;
+            height: 50px;
+            text-align: center;
+            border: 2px solid cyan;
+            box-shadow: inset 0 0 10px cyan;
+            position: relative;
+        }
 
-input {
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    border: none;
-    font-size: 20px;
-    background: black;
-    color: cyan;
-    font-family: 'Orbitron', sans-serif;
-    outline: none;
-    box-shadow: inset 0 0 10px cyan;
-}
+        input {
+            width: 100%;
+            height: 100%;
+            text-align: center;
+            border: none;
+            font-size: 20px;
+            background: black;
+            color: cyan;
+            font-family: 'Orbitron', sans-serif;
+            outline: none;
+            box-shadow: inset 0 0 10px cyan;
+        }
 
-input:disabled {
-    background: rgba(0, 255, 255, 0.2);
-    color: lime;
-}
+        input:disabled {
+            background: rgba(0, 255, 255, 0.2);
+            color: lime;
+        }
 
-#controls {
-    margin-top: 20px;
-}
+        #controls {
+            margin-top: 10px;
+        }
 
-button {
-    padding: 10px 20px;
-    font-size: 18px;
-    background-color: cyan;
-    color: black;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-    box-shadow: 0 0 15px cyan;
-    transition: 0.3s;
-    margin: 10px;
-}
+        button {
+            padding: 10px 20px;
+            font-size: 18px;
+            background-color: cyan;
+            color: black;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+            box-shadow: 0 0 15px cyan;
+            transition: 0.3s;
+            margin: 10px;
+        }
 
-button:hover {
-    background-color: lime;
-    box-shadow: 0 0 15px lime;
-}
+        button:hover {
+            background-color: lime;
+            box-shadow: 0 0 15px lime;
+        }
 
-#stopwatch {
-    margin-top: 20px;
-    font-size: 20px;
-    text-shadow: 0 0 10px cyan;
-}
+        #stopwatch {
+            margin-top: 10px;
+            font-size: 20px;
+            text-shadow: 0 0 10px cyan;
+        }
 
-#stopwatch button {
-    margin-left: 10px;
-}
+        #scoreBoard {
+            font-size: 20px;
+            margin: 10px 0;
+            text-shadow: 0 0 10px cyan;
+        }
 
     </style>
 </head>
 <body>
     <h1>Neon Sudoku</h1>
+    
+    <!-- Scoreboard -->
+    <div id="scoreBoard">Time: <span id="time">00:00</span> | Best Time: <span id="sudokuHighScore">--:--</span></div>
+
     <div id="sudoku-container">
         <table id="sudoku-grid"></table>
     </div>
     
     <div id="controls">
-        <button id="solveButton">Solve</button>
-        <button id="resetButton">Reset</button>
-        <div id="stopwatch">
-            <span id="time">00:00</span>
-            <button id="stopwatchButton">Start</button>
-        </div>
+        <a href="../index2.html"><button>Home</button></a>
+        <button id="startButton">Start</button>
+        <button id="pauseButton">Pause</button>
+        <button id="restartButton">Restart</button>
     </div>
 
-    <script src="script.js"></script>
     <script>
         let stopwatchInterval;
-let stopwatchSeconds = 0;
+        let stopwatchSeconds = 0;
+        let isPaused = false;
+        let sudokuHighScore = localStorage.getItem("sudokuHighScore") || "--:--";
+        document.getElementById("sudokuHighScore").textContent = sudokuHighScore;
 
-document.addEventListener("DOMContentLoaded", () => {
-    createSudokuGrid();
-    document.getElementById("solveButton").addEventListener("click", solveSudoku);
-    document.getElementById("resetButton").addEventListener("click", resetGame);
-    document.getElementById("stopwatchButton").addEventListener("click", toggleStopwatch);
-});
+        document.addEventListener("DOMContentLoaded", () => {
+            createSudokuGrid();
+            document.getElementById("startButton").addEventListener("click", startGame);
+            document.getElementById("pauseButton").addEventListener("click", togglePause);
+            document.getElementById("restartButton").addEventListener("click", resetGame);
+        });
 
-function createSudokuGrid() {
-    const gridSize = 9;
-    const sudokuGrid = document.getElementById("sudoku-grid");
-    sudokuGrid.innerHTML = "";
-    const initialNumbers = generateInitialNumbers();
+        function createSudokuGrid() {
+            const gridSize = 9;
+            const sudokuGrid = document.getElementById("sudoku-grid");
+            sudokuGrid.innerHTML = "";
+            const initialNumbers = generateInitialNumbers();
 
-    for (let i = 0; i < gridSize; i++) {
-        const row = document.createElement("tr");
-        for (let j = 0; j < gridSize; j++) {
-            const cell = document.createElement("td");
-            const input = document.createElement("input");
-            input.type = "number";
-            input.min = 1;
-            input.max = 9;
-            input.id = `cell-${i}-${j}`;
-            cell.appendChild(input);
-            row.appendChild(cell);
+            for (let i = 0; i < gridSize; i++) {
+                const row = document.createElement("tr");
+                for (let j = 0; j < gridSize; j++) {
+                    const cell = document.createElement("td");
+                    const input = document.createElement("input");
+                    input.type = "number";
+                    input.min = 1;
+                    input.max = 9;
+                    input.id = `cell-${i}-${j}`;
+                    cell.appendChild(input);
+                    row.appendChild(cell);
 
-            if (initialNumbers[i][j] !== 0) {
-                input.value = initialNumbers[i][j];
-                input.disabled = true;
+                    if (initialNumbers[i][j] !== 0) {
+                        input.value = initialNumbers[i][j];
+                        input.disabled = true;
+                    }
+                }
+                sudokuGrid.appendChild(row);
             }
         }
-        sudokuGrid.appendChild(row);
-    }
-}
 
-function generateInitialNumbers() {
-    const gridSize = 9;
-    const initialNumbers = Array.from({ length: gridSize }, () => Array(gridSize).fill(0));
+        function generateInitialNumbers() {
+            const gridSize = 9;
+            const initialNumbers = Array.from({ length: gridSize }, () => Array(gridSize).fill(0));
 
-    for (let i = 0; i < gridSize; i++) {
-        for (let j = 0; j < gridSize; j++) {
-            if (Math.random() > 0.5) {
-                initialNumbers[i][j] = Math.floor(Math.random() * 9) + 1;
+            for (let i = 0; i < gridSize; i++) {
+                for (let j = 0; j < gridSize; j++) {
+                    if (Math.random() > 0.5) {
+                        initialNumbers[i][j] = Math.floor(Math.random() * 9) + 1;
+                    }
+                }
+            }
+            return initialNumbers;
+        }
+
+        function startGame() {
+            if (!stopwatchInterval) {
+                stopwatchInterval = setInterval(updateStopwatch, 1000);
             }
         }
-    }
-    return initialNumbers;
-}
 
-function solveSudoku() {
-    for (let i = 0; i < 9; i++) {
-        for (let j = 0; j < 9; j++) {
-            const cell = document.getElementById(`cell-${i}-${j}`);
-            if (!cell.disabled) {
-                cell.value = (i * 9 + j) % 9 + 1;
+        function togglePause() {
+            isPaused = !isPaused;
+            if (isPaused) {
+                clearInterval(stopwatchInterval);
+                stopwatchInterval = null;
+                document.getElementById("pauseButton").innerText = "Resume";
+            } else {
+                stopwatchInterval = setInterval(updateStopwatch, 1000);
+                document.getElementById("pauseButton").innerText = "Pause";
             }
         }
-    }
-}
 
-function resetGame() {
-    createSudokuGrid();
-    stopwatchSeconds = 0;
-    document.getElementById("time").textContent = "00:00";
-    clearInterval(stopwatchInterval);
-    stopwatchInterval = null;
-    document.getElementById("stopwatchButton").textContent = "Start";
-}
+        function resetGame() {
+            createSudokuGrid();
+            stopwatchSeconds = 0;
+            document.getElementById("time").textContent = "00:00";
+            clearInterval(stopwatchInterval);
+            stopwatchInterval = null;
+            document.getElementById("pauseButton").innerText = "Pause";
+            document.getElementById("startButton").innerText = "Start";
+        }
 
-function toggleStopwatch() {
-    const button = document.getElementById("stopwatchButton");
-    if (stopwatchInterval) {
-        clearInterval(stopwatchInterval);
-        stopwatchInterval = null;
-        button.textContent = "Start";
-    } else {
-        stopwatchInterval = setInterval(updateStopwatch, 1000);
-        button.textContent = "Stop";
-    }
-}
+        function updateStopwatch() {
+            if (isPaused) return;
+            stopwatchSeconds++;
+            const minutes = Math.floor(stopwatchSeconds / 60);
+            const seconds = stopwatchSeconds % 60;
+            const formattedTime = `${pad(minutes)}:${pad(seconds)}`;
+            document.getElementById("time").textContent = formattedTime;
 
-function updateStopwatch() {
-    stopwatchSeconds++;
-    const minutes = Math.floor(stopwatchSeconds / 60);
-    const seconds = stopwatchSeconds % 60;
-    document.getElementById("time").textContent = `${pad(minutes)}:${pad(seconds)}`;
-}
+            // Save Best Time
+            if (sudokuHighScore === "--:--" || stopwatchSeconds < convertToSeconds(sudokuHighScore)) {
+                sudokuHighScore = formattedTime;
+                localStorage.setItem("sudokuHighScore", sudokuHighScore);
+                document.getElementById("sudokuHighScore").textContent = sudokuHighScore;
+            }
+        }
 
-function pad(number) {
-    return number < 10 ? "0" + number : number;
-}
+        function pad(number) {
+            return number < 10 ? "0" + number : number;
+        }
 
+        function convertToSeconds(time) {
+            const parts = time.split(":");
+            return parseInt(parts[0]) * 60 + parseInt(parts[1]);
+        }
     </script>
 </body>
 </html>
